0.8.0 (currently working on)
- [#2946] Change: Replace tx_seminars_seminar::getAdditionalInformationRaw() with tx_seminars_seminar::getAdditionalInformation()
- [#2760] Change: Replace tx_seminars_seminar::getDescription() with tx_seminars_seminar::getDescriptionRaw()
- [#1740] Fix: Delete the editorcfg entry from ext_localconf.php plus the related files
- [#2873] Change: Refactor the registration functions in seminar and registrationManager classes
- [#2924] Feature: Add an RTE-field description to the seminar organizers
- [#2928] Feature: Add a getter for begin_date_registration in the new and old model class.
- [#2930] Fix: Remove all trigger_error() calls from tx_seminars_registration
- [#2921] Feature: Add the field registration_begin_date to the FE-Editor
- [#2920] Feature: Add a field registration_begin_date to the seminars table and the BE
- [#2910] Change: Move the flexforms XML file to Configuration/FlexForms
- [#2908] Change: Move the TypoScript configuration from static to Configuration/Settings
- [#2901] Fix: warning 102 when saving seminar-record of type 'date'
- [#2796] Feature: Add event model and mapper
- [#2774] Fix: Cannot cancel an unregistration
- [#2872] Change: In the notification mails for the organizers set unlimited string for vacancies if event has unlimited vacancies
- [#2622] Fix: Error when trying to create price with access using IRRE
- [#2812] Feature: Add a CSS class for vancancies on registration queue
- [#2833] Fix: Write tests for events with unlimitedVacancies
- [#2870] Fix: In registration column in list view the text "fully booked" is falsely displayed
- [#2037] Change: Drop the additional_times_places field
- [#2865] Change: Add the JavaScript file via TypoScript
- [#840] Change: Rename and move the flexforms file
- [#2864] Change: Use the field names as TypoScript array keys for the Formidable configuration
- [#2697] Change: Make the waiting list a checkbox and provide an update function from the old values