@@ -35,6 +35,13 @@
 			<label index="seminars.pi_flexform.formal">formal</label>
 			<label index="seminars.pi_flexform.informal">informal</label>
 			<label index="seminars.pi_flexform.sheet_list_view">List view</label>
+			<label index="seminars.pi_flexform.displaySearchFormFields">Display search widget options:</label>
+			<label index="seminars.pi_flexform.searchForm.type">Event type</label>
+			<label index="seminars.pi_flexform.searchForm.language">Language</label>
+			<label index="seminars.pi_flexform.searchForm.country">Country</label>
+			<label index="seminars.pi_flexform.searchForm.city">City</label>
+			<label index="seminars.pi_flexform.searchForm.place">Place</label>
+			<label index="seminars.pi_flexform.searchForm.textField">Full-text search</label>
 			<label index="seminars.pi_flexform.limitListViewToEventTypes">List events only of these types:</label>
 			<label index="seminars.pi_flexform.limitListViewToCategories">List events only from these categories:</label>
 			<label index="seminars.pi_flexform.limitListViewToPlaces">List events only at these places:</label>
@@ -554,6 +561,13 @@
 			<label index="seminars.pi_flexform.formal">formell</label>
 			<label index="seminars.pi_flexform.informal">informell</label>
 			<label index="seminars.pi_flexform.sheet_list_view">Listenansicht</label>
+			<label index="seminars.pi_flexform.displaySearchFormFields">Folgende Filteroptionen anzeigen:</label>
+			<label index="seminars.pi_flexform.searchForm.type">Veranstaltungsart</label>
+			<label index="seminars.pi_flexform.searchForm.language">Sprache</label>
+			<label index="seminars.pi_flexform.searchForm.country">Land</label>
+			<label index="seminars.pi_flexform.searchForm.city">Stadt</label>
+			<label index="seminars.pi_flexform.searchForm.place">Ort</label>
+			<label index="seminars.pi_flexform.searchForm.textField">Volltextsuche</label>
 			<label index="seminars.pi_flexform.limitListViewToEventTypes">Listenansicht auf Veranstaltungen dieser Arten einschränken:</label>
 			<label index="seminars.pi_flexform.limitListViewToCategories">Listenansicht auf Veranstaltungen aus diesen Kategorien einschränken:</label>
 			<label index="seminars.pi_flexform.limitListViewToPlaces">Listenansicht auf Veranstaltungen an diesen Orten einschränken:</label>
@@ -1994,6 +2008,13 @@
 			<label index="seminars.pi_flexform.formal" type="integer">211667739</label>
 			<label index="seminars.pi_flexform.informal" type="integer">63642221</label>
 			<label index="seminars.pi_flexform.sheet_list_view" type="integer">252903448</label>
+			<label index="seminars.pi_flexform.displaySearchFormFields" type="integer">148172548</label>
+			<label index="seminars.pi_flexform.searchForm.type" type="integer">99114704</label>
+			<label index="seminars.pi_flexform.searchForm.language" type="integer">77154959</label>
+			<label index="seminars.pi_flexform.searchForm.country" type="integer">93787849</label>
+			<label index="seminars.pi_flexform.searchForm.city" type="integer">92079470</label>
+			<label index="seminars.pi_flexform.searchForm.place" type="integer">129617664</label>
+			<label index="seminars.pi_flexform.searchForm.textField" type="integer">131588247</label>
 			<label index="seminars.pi_flexform.limitListViewToEventTypes" type="integer">263724247</label>
 			<label index="seminars.pi_flexform.limitListViewToCategories" type="integer">144505574</label>
 			<label index="seminars.pi_flexform.limitListViewToPlaces" type="integer">116361790</label>
@@ -3204,6 +3225,13 @@
 			<label index="seminars.pi_flexform.formal">formal</label>
 			<label index="seminars.pi_flexform.informal">informal</label>
 			<label index="seminars.pi_flexform.sheet_list_view">List view</label>
+			<label index="seminars.pi_flexform.displaySearchFormFields">Display search widget options:</label>
+			<label index="seminars.pi_flexform.searchForm.type">Event type</label>
+			<label index="seminars.pi_flexform.searchForm.language">Language</label>
+			<label index="seminars.pi_flexform.searchForm.country">Country</label>
+			<label index="seminars.pi_flexform.searchForm.city">City</label>
+			<label index="seminars.pi_flexform.searchForm.place">Place</label>
+			<label index="seminars.pi_flexform.searchForm.textField">Full-text search</label>
 			<label index="seminars.pi_flexform.limitListViewToEventTypes">List events only of these types:</label>
 			<label index="seminars.pi_flexform.limitListViewToCategories">List events only from these categories:</label>
 			<label index="seminars.pi_flexform.limitListViewToPlaces">List events only at these places:</label>
