@@ -1,4 +1,5 @@
 0.8.0 (currently working on)
+- [#2936] Feature: Add a flexform configuration for the Search Widget in the list view
 - [#2946] Change: Replace tx_seminars_seminar::getAdditionalInformationRaw() with tx_seminars_seminar::getAdditionalInformation()
 - [#2760] Change: Replace tx_seminars_seminar::getDescription() with tx_seminars_seminar::getDescriptionRaw()
 - [#1740] Fix: Delete the editorcfg entry from ext_localconf.php plus the related files
